--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://www.primefaces.org/primeng/showcase/styles.0d40c84421c7aa4e7eeb.css">
+  
 </head>
 <body>
   <app-root></app-root>
