minor style tweaks and alternative icon input added to work in stackblitz

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="https://www.primefaces.org/primeng/showcase/styles.0d40c84421c7aa4e7eeb.css">
+
+  <!-- this will get a 404 locally, but will work if deployed to stackblitz -->
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   
 </head>
 <body>
